--- a/SimpleTweetMap/Client/index.html
+++ b/SimpleTweetMap/Client/index.html
@@ -1,9 +1,33 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-    <title>Simple TweetMap</title>
+	<title>Simple TweetMap</title>
+	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+	<meta charset="utf-8">
+	<style>
+		html, body, #map-canvas {
+			height: 100%;
+			margin: 0px;
+			padding: 0px;
+		}
+	</style>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+	<script>
+var map;
+function initialize() {
+  var mapOptions = {
+    zoom: 11,
+    center: new google.maps.LatLng(59.325021, 18.067982)
+  };
+  map = new google.maps.Map(document.getElementById('map-canvas'),
+      mapOptions);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
+	</script>
 </head>
 <body>
-	Simple TweetMap
+	<div id="map-canvas"></div>
 </body>
 </html>
