--- a/SimpleTweetMap/Client/index.html
+++ b/SimpleTweetMap/Client/index.html
@@ -21,9 +21,17 @@ function initialize() {
   };
   map = new google.maps.Map(document.getElementById('map-canvas'),
       mapOptions);
+
+  var marker = new google.maps.Marker({
+  	position: mapOptions.center,
+  	map: map,
+  	title: 'Aptitud Office'
+  });
 }
 
 google.maps.event.addDomListener(window, 'load', initialize);
+
+
 
 	</script>
 </head>
