--- a/SimpleTweetMap/Client/index.html
+++ b/SimpleTweetMap/Client/index.html
@@ -12,6 +12,7 @@
 		}
 	</style>
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+	<script src="/signalr/hubs"></script>
 	<script>
 var map;
 function initialize() {
