--- a/SimpleTweetMap/Client/index.html
+++ b/SimpleTweetMap/Client/index.html
@@ -11,6 +11,8 @@
 			padding: 0px;
 		}
 	</style>
+	<script src="Scripts/jquery-1.6.4.min.js"></script>
+	<script src="Scripts/jquery.signalR-2.1.2.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 	<script src="/signalr/hubs"></script>
 	<script>
@@ -20,16 +22,25 @@ function initialize() {
     zoom: 11,
     center: new google.maps.LatLng(59.325021, 18.067982)
   };
-  map = new google.maps.Map(document.getElementById('map-canvas'),
-      mapOptions);
-
-  var marker = new google.maps.Marker({
-  	position: mapOptions.center,
-  	map: map,
-  	title: 'Aptitud Office'
+  map = new google.maps.Map(document.getElementById('map-canvas'),mapOptions);
+  var connection = $.hubConnection();
+  var userHubProxy2 = $.connection.userhub;
+  var userHubProxy = connection.createHubProxy('userHub');
+  userHubProxy.on('helloWorld', function (message) {
+  	console.log(message);
   });
 }
+//var userHubProxy = $.connection.userHub;
+////userHubProxy.client.helloWorld = function (message) {
+////	console.log(message);
 
+////	var marker = new google.maps.Marker({
+////		position: mapOptions.center,
+////		map: map,
+////		title: message
+////	});
+////};
+//$.connection.hub.start();
 google.maps.event.addDomListener(window, 'load', initialize);
 
 
