--- a/SimpleTweetMap.Web/index.html
+++ b/SimpleTweetMap.Web/index.html
@@ -16,40 +16,34 @@
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 	<script src="/signalr/hubs"></script>
 	<script>
+		var map;
+		var mapOptions;
+
 		$(function () {
 			var userHubProxy = $.connection.userHub;
 
 			userHubProxy.client.hello = function (message) {
 				console.log(message);
 
-				//var marker = new google.maps.Marker({
-				//	position: mapOptions.center,
-				//	map: map,
-				//	title: message
-				//});
+				var marker = new google.maps.Marker({
+					position: mapOptions.center,
+					map: map,
+					title: message
+				});
 			};
+
 			$.connection.hub.start();
 		});
-
-		var map;
+		
 		function initialize() {
-			var mapOptions = {
+			mapOptions = {
 				zoom: 11,
 				center: new google.maps.LatLng(59.325021, 18.067982)
 			};
+
 			map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 		}
-		//var userHubProxy = $.connection.userHub;
-		////userHubProxy.client.helloWorld = function (message) {
-		////	console.log(message);
 
-		////	var marker = new google.maps.Marker({
-		////		position: mapOptions.center,
-		////		map: map,
-		////		title: message
-		////	});
-		////};
-		//$.connection.hub.start();
 		google.maps.event.addDomListener(window, 'load', initialize);
 
 	</script>
