Try this mother

--- a/SimpleTweetMap.Web/index.html
+++ b/SimpleTweetMap.Web/index.html
@@ -52,7 +52,7 @@
 					content: contentString,
 					maxWidth: 400
 				});
-				var image = 'aptitud.png';
+				var image = 'images/aptitud.png';
 				var marker = new google.maps.Marker({
 					position: new google.maps.LatLng(dto.coordinates.Latitude, dto.coordinates.Longitude),
 					map: map,
